# CMakeTemplates

./: README.md
SDL CMake Template/: CMakeLists.txt  VS2019 SDL2 project build setup guide.txt
SDL CMake Template/src/main/: main.cpp
